Fixed items column right alignment in apps list

--- a/projects/ng-dialogs/src/styles/ag-grid.styles.scss
+++ b/projects/ng-dialogs/src/styles/ag-grid.styles.scss
@@ -88,6 +88,10 @@ ag-grid-angular.ag-theme-material {
 }
 
 .ag-cell {
+  &.number-cell {
+    text-align: right;
+  }
+
   &:not(.no-padding) {
     padding-left: 8px !important;
     padding-right: 8px !important;
